attempt inheriting drawable interface

--- a/RunAndFire/RunAndFire.vcxproj
+++ b/RunAndFire/RunAndFire.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="functions.h" />
     <ClInclude Include="Golem.h" />
     <ClInclude Include="headers_which_you_need.h" />
+    <ClInclude Include="helpers.h" />
     <ClInclude Include="loot.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="Monster.h" />
