--- a/RunAndFire/RunAndFire.vcxproj.filters
+++ b/RunAndFire/RunAndFire.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="loot.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="helpers.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
