--- a/RunAndFire/RunAndFire.vcxproj
+++ b/RunAndFire/RunAndFire.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="functions.h" />
+    <ClInclude Include="globals.h" />
     <ClInclude Include="Golem.h" />
     <ClInclude Include="headers_which_you_need.h" />
     <ClInclude Include="helpers.h" />
