--- a/RunAndFire/RunAndFire.vcxproj
+++ b/RunAndFire/RunAndFire.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <Font Include="terminal.TTF" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="maps\map1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
