--- a/RunAndFire/RunAndFire.vcxproj
+++ b/RunAndFire/RunAndFire.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="loot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monster.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +148,7 @@
     <ClInclude Include="helpers.h" />
     <ClInclude Include="loot.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Monster.h" />
   </ItemGroup>
   <ItemGroup>
