--- a/RunAndFire/RunAndFire.vcxproj
+++ b/RunAndFire/RunAndFire.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="BossGolem.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Ghost.cpp" />
     <ClCompile Include="Golem.cpp" />
     <ClCompile Include="loot.cpp" />
     <ClCompile Include="main.cpp" />
@@ -142,6 +143,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="functions.h" />
+    <ClInclude Include="Ghost.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="Golem.h" />
     <ClInclude Include="headers_which_you_need.h" />
